// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTablePage rendering render with Breadcrubs 1`] = `
<div
  className="tasks-table-wrapper"
>
  <CancelResumeConfirm
    action={[Function]}
    closeModal={[MockFunction]}
    modalStatus="CLOSED"
    selected={Array []}
    selectedRowsLen={0}
  />
  <PageLayout
    beforeToolbarComponent={
      <Connect(TasksDashboard)
        history={
          Object {
            "location": Object {
              "search": "",
            },
          }
        }
        parentTaskID={null}
      />
    }
    breadcrumbOptions={
      Object {
        "breadcrumbItems": Array [
          Object {
            "caption": "Tasks",
            "url": "/foreman_tasks/tasks",
          },
          Object {
            "caption": "action Name",
            "url": "/foreman_tasks/tasks/someid",
          },
          Object {
            "caption": "Sub tasks",
          },
        ],
      }
    }
    onSearch={[Function]}
    searchProps={
      Object {
        "autocomplete": Object {
          "id": "searchBar",
          "searchQuery": "",
          "url": "tasks/auto_complete_search",
          "useKeyShortcuts": true,
        },
        "bookmarks": Object {
          "canCreateBookmarks": true,
          "documentationUrl": "4.1.5Searching",
          "url": "/api/bookmarks",
        },
        "controller": "tasks",
      }
    }
    searchQuery="a=b"
    searchable={true}
    toastNotifications="foreman-tasks-cancel"
    toolbarButtons={
      <React.Fragment>
        <ExportButton
          title="Export All"
          url="/foreman_tasks/tasks.csv?include_permissions=true"
        />
        <ActionSelectButton
          disabled={true}
          onCancel={[MockFunction]}
          onResume={[MockFunction]}
        />
      </React.Fragment>
    }
  >
    <TasksTable
      actionName=""
      actionSelected={[MockFunction]}
      cancelTask={[MockFunction]}
      error={null}
      getTableItems={[MockFunction]}
      hideSelcetedModal={[MockFunction]}
      history={
        Object {
          "location": Object {
            "search": "",
          },
        }
      }
      itemCount={2}
      modalStatus="CLOSED"
      pagination={
        Object {
          "page": 1,
          "perPage": 10,
        }
      }
      parentTaskID={null}
      results={
        Array [
          "a",
          "b",
        ]
      }
      resumeTask={[MockFunction]}
      selectAllRows={[MockFunction]}
      selectRow={[MockFunction]}
      selectedRows={Array []}
      showCancelSelcetedModal={[MockFunction]}
      showResumeSelcetedModal={[MockFunction]}
      sort={
        Object {
          "by": "q",
          "order": "w",
        }
      }
      status="RESOLVED"
      unselectAllRows={[MockFunction]}
      unselectRow={[MockFunction]}
    />
  </PageLayout>
</div>
`;

exports[`TasksTablePage rendering render with minimal props 1`] = `
<div
  className="tasks-table-wrapper"
>
  <CancelResumeConfirm
    action={[Function]}
    closeModal={[MockFunction]}
    modalStatus="CLOSED"
    selected={Array []}
    selectedRowsLen={0}
  />
  <PageLayout
    beforeToolbarComponent={
      <Connect(TasksDashboard)
        history={
          Object {
            "location": Object {
              "search": "",
            },
          }
        }
        parentTaskID={null}
      />
    }
    onSearch={[Function]}
    searchProps={
      Object {
        "autocomplete": Object {
          "id": "searchBar",
          "searchQuery": "",
          "url": "tasks/auto_complete_search",
          "useKeyShortcuts": true,
        },
        "bookmarks": Object {
          "canCreateBookmarks": true,
          "documentationUrl": "4.1.5Searching",
          "url": "/api/bookmarks",
        },
        "controller": "tasks",
      }
    }
    searchQuery="a=b"
    searchable={true}
    toastNotifications="foreman-tasks-cancel"
    toolbarButtons={
      <React.Fragment>
        <ExportButton
          title="Export All"
          url="/foreman_tasks/tasks.csv?include_permissions=true"
        />
        <ActionSelectButton
          disabled={true}
          onCancel={[MockFunction]}
          onResume={[MockFunction]}
        />
      </React.Fragment>
    }
  >
    <TasksTable
      actionName=""
      actionSelected={[MockFunction]}
      cancelTask={[MockFunction]}
      error={null}
      getTableItems={[MockFunction]}
      hideSelcetedModal={[MockFunction]}
      history={
        Object {
          "location": Object {
            "search": "",
          },
        }
      }
      itemCount={2}
      modalStatus="CLOSED"
      pagination={
        Object {
          "page": 1,
          "perPage": 10,
        }
      }
      parentTaskID={null}
      results={
        Array [
          "a",
          "b",
        ]
      }
      resumeTask={[MockFunction]}
      selectAllRows={[MockFunction]}
      selectRow={[MockFunction]}
      selectedRows={Array []}
      showCancelSelcetedModal={[MockFunction]}
      showResumeSelcetedModal={[MockFunction]}
      sort={
        Object {
          "by": "q",
          "order": "w",
        }
      }
      status="RESOLVED"
      unselectAllRows={[MockFunction]}
      unselectRow={[MockFunction]}
    />
  </PageLayout>
</div>
`;
